Refactor of NTC operations